# quantifying_emergence_llms

./: .gitignore  INSTALL.md  pyproject.toml  requirements.txt
experiments/known_agg_function/: ablation_dummy_pipeline.py  ablation_pipeline.py  imbalanced_dataset_pipeline.py  imbalanced_dataset_pipelinev2.py  mean_ablation_dummy_pipeline.py  temperature_pipeline.py  untrained_model.py
experiments/nim/: nim_inference_and_ei.py  nim_inference_and_ei_large_hint.py
others/nim/: adversarial_experiment.py  nim_inference_and_ei_large.py
others/nis_experiments/: all_heads_search_loop.py  ei_calculation.py  imbalanced_dataset_pipeline.py  model_size_pipeline.py  single_head_run.py  tpm_generator.py  whole_circuit.py
others/nis_utils/: nim_dataset_generator.py
src/data_generation/: all_heads.py  known_agg_function.py  known_agg_function_imbalance_v2.py  known_agg_function_imbalanced.py  nim_dataset_generator_with_hint.py  single_head.py  whole_circuit.py
src/nis_utils/: EI_calculation.py  coincident_vectors.py  coincident_vectors_cosine_sim.py
