[project]
name = "quantifying-emergence-llms"
version = "0.1.0"
description = "Quantifying emergence in LLMs using causal emergence and EI"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0",
    "transformers>=4.30",
    # Numerical / scientific
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    # Data / IO
    "pandas>=2.0",
    "datasets>=2.14", # Used internally by Easy-Transformer (IOIDataset)
    # Visualisation
    "matplotlib>=3.7",
    "seaborn>=0.12", # Used in nim_inference_and_ei*.py — MISSING from original requirements.txt
    # Utilities
    "tqdm>=4.65",
    "einops>=0.6", # Required by Easy-Transformer internally
    "fancy-einsum>=0.0.3", # Required by Easy-Transformer internally
    "plotly>=6.8.0",
]
# ---------------------------------------------------------------------------
# IMPORTANT — easy_transformer is NOT a pip package.
#
# `easy-transformer` was removed from PyPI; its successor is `transformer-lens`
# (pip install transformer-lens), but the API is different.
#
# The code expects a local clone injected via sys.path:
#
#   <project_root>/external/Easy-Transformer/
#
# Clone it with:
#   mkdir -p external
#   git clone https://github.com/redwoodresearch/Easy-Transformer
#
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
[tool.uv.sources]
